--- a/book/src/main/resources-filtered/META-INF/resources/payments/stripe/changelog.jspx
+++ b/book/src/main/resources-filtered/META-INF/resources/payments/stripe/changelog.jspx
@@ -37,7 +37,7 @@ along with ao-payments-stripe.  If not, see <https://www.gnu.org/licenses/>.
     shortTitle="Changelog"
     tocLevels="1"
     datePublished="2016-10-29T19:08:07-05:00"
-    dateModified="2023-04-14T16:43:04Z"
+    dateModified="2023-09-13T19:28:44Z"
   >
     <c:if test="${fn:endsWith('@{project.version}', '-SNAPSHOT') and !fn:endsWith('@{project.version}', '-POST-SNAPSHOT')}">
       <changelog:release
@@ -47,7 +47,15 @@ along with ao-payments-stripe.  If not, see <https://www.gnu.org/licenses/>.
         artifactId="@{documented.artifactId}"
         repository="@{nexusUrl}content/repositories/snapshots/"
         scmUrl="@{project.scm.url}"
-      />
+      >
+        <ul>
+          <li>
+            Updated for compatibility with
+            <ao:a href="https://github.com/stripe/stripe-java/releases/tag/v23.0.0">stripe-java-23.0.0</ao:a> with
+            <ao:a href="https://stripe.com/docs/upgrades#2023-08-16">Stripe API 2023-08-16</ao:a>.
+          </li>
+        </ul>
+      </changelog:release>
     </c:if>
 
     <changelog:release
